--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,6 +74,16 @@ input, select, textarea {
     appearance: none;
 }
 
+.bg2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../../images/bg.jpg");
+    z-index: -1;
+}
+
 /* Basic */
 
 @-ms-viewport {
@@ -3209,7 +3219,7 @@ table.alt tbody tr td {
     overflow: hidden;
 }
 
-/*    #wrapper > .bg {
+    #wrapper > .bg {
         position: absolute;
         top: 0;
         left: 0;
@@ -3222,14 +3232,19 @@ table.alt tbody tr td {
         background-repeat: repeat, no-repeat, no-repeat;
         background-attachment: scroll, scroll, scroll;
         z-index: -1;
-    }*/
+    }
     #wrapper > .bg {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url("../../images/bg.jpg");
+        background-color: #212931;
+        background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
+        background-size: auto, auto, 100% auto;
+        background-position: center, center, top center;
+        background-repeat: repeat, no-repeat, no-repeat;
+        background-attachment: scroll, scroll, scroll;
         z-index: -1;
     }
 
