--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,16 +74,6 @@ input, select, textarea {
     appearance: none;
 }
 
-.bg2 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url("../../images/bg.jpg");
-    z-index: -1;
-}
-
 /* Basic */
 
 @-ms-viewport {
@@ -3219,34 +3209,20 @@ table.alt tbody tr td {
     overflow: hidden;
 }
 
+
     #wrapper > .bg {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #212931;
-        background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
-        background-size: auto, auto, 100% auto;
-        background-position: center, center, top center;
-        background-repeat: repeat, no-repeat, no-repeat;
-        background-attachment: scroll, scroll, scroll;
+        background-image: url("../../images/bg.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         z-index: -1;
     }
-    #wrapper > .bg {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #212931;
-        background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
-        background-size: auto, auto, 100% auto;
-        background-position: center, center, top center;
-        background-repeat: repeat, no-repeat, no-repeat;
-        background-attachment: scroll, scroll, scroll;
-        z-index: -1;
-    }
+
 
         #wrapper > .bg.fixed {
             position: fixed;
