--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,6 +74,19 @@ input, select, textarea {
     appearance: none;
 }
 
+.main_bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: 100% auto;
+    background-attachment: scroll;
+    background-image: url("../../images/bg.jpg");
+    background-repeat: no-repeat;
+    z-index: -1;
+}
+
 /* Basic */
 
 @-ms-viewport {
@@ -3216,9 +3229,8 @@ table.alt tbody tr td {
         left: 0;
         width: 100%;
         height: 100%;
+        background-size: 100% auto;
         background-image: url("../../images/bg.jpg");
-        background-size: cover;
-        background-position: center;
         background-repeat: no-repeat;
         z-index: -1;
     }
