--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3228,24 +3228,19 @@ input, select, textarea {
 	}
 
 		#wrapper > .bg {
-			position: absolute;
 			top: 0;
-			left: 0;
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../images/bg.jpg");
-			background-size: auto;
+			background-image: url(../../images/bg.jpg);
+			background-size: 100% auto;
 			background-position: top center;
 			background-repeat: no-repeat;
-			background-attachment: scroll;
 			z-index: -1;
 		}
 
 			#wrapper > .bg.fixed {
 				position: fixed;
-				width: 100vw;
-				height: 100vh;
 			}
 
 		#wrapper.fade-in:before {
